# SaberMod

./: .editorconfig  .gitignore  CHANGELOG.rst  CMakeLists.txt  Makefile  README-raven.txt  README.rst  cvar-calculator.html
assets/: CMakeLists.txt  SOURCE.txt  mv.info  reset.cfg  server.cfg
assets/gfx/2d/: crosshairarrow.tga  crosshairarrow.xcf  crosshairj.tga  crosshairk.tga
assets/gfx/menus/: download.tga  missing.tga
assets/menu/art/: disruptor.tga  disruptor.xcf
assets/modes/: Capture The Flag.cfg  Capture The Ysalamiri.cfg  Clan Arena.cfg  FF Capture The Flag.cfg  FF Free For All.cfg  FF Holocron.cfg  Holocron.cfg  Insta Rockets Free For All.cfg  Instagib Capture The Flag.cfg  Instagib Free For All.cfg  Jedi Master.cfg  NF Clan Arena.cfg  NF Duel.cfg  NF ESL Duel.cfg  NF Free For All.cfg  NF Red Rover.cfg  NF Team Free For All.cfg  Pistolero.cfg
assets/modes/Full Force/: Capture The Flag.cfg  Free For All.cfg  Holocron.cfg
assets/modes/Instagib/: CJK Capture The Flag.cfg  CJK Free For All.cfg  CJK Last Man Standing.cfg  Capture The Flag.cfg  Free For All.cfg  Insta Rockets Free For All.cfg  Instagib Capture The Flag.cfg  Instagib Free For All.cfg  Last Man Standing.cfg  Rockets Free For All.cfg
assets/modes/Saber Only/: Clan Arena.cfg  Duel Ladder.cfg  Duel.cfg  ESL Duel.cfg  Free For All.cfg  Last Man Standing.cfg  Red Rover.cfg  Survival.cfg  Team Free For All WK.cfg  Team Free For All.cfg  Vampiric Clan Arena.cfg  Vampiric Free For All.cfg
assets/modes/Weapons/: Capture The Flag.cfg  Capture The Ysalamiri.cfg  Clan Arena.cfg  Holocron.cfg  Jedi Master.cfg
assets/scripts/: arenas.txt  duel.arena
assets/shaders/: sabermod.shader  sabermod.shader_mv
assets/strip/: SABERMOD2_INGAME.sp  SABERMOD2_MENUS.sp  SABERMOD_INGAME.sp  SABERMOD_MENUS.sp
assets/ui/: jk2mpingame.txt
assets/ui/jk2mp/: createserver.menu  gameinfo.txt  ingame.menu  ingame_about.menu  ingame_addbot.menu  ingame_callvote.menu  ingame_controls.menu  ingame_join.menu  ingame_leave.menu  ingame_player.menu  ingame_playerforce.menu  ingame_setup.menu  ingame_setup_modoptions.menu  ingame_setup_modoptions2.menu  ingame_setup_original.menu  ingame_vote.menu  menudef.h  rules_games.menu  setup.menu
code/: CMakeLists.txt
code/cgame/: CMakeLists.txt  animtable.h  cg_consolecmds.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_info.c  cg_light.c  cg_lights.h  cg_local.h  cg_localents.c  cg_main.c  cg_marks.c  cg_newDraw.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_public.h  cg_saga.c  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_syscalls.asm  cg_syscalls.c  cg_turret.c  cg_view.c  cg_weaponinit.c  cg_weapons.c  cgame.bat  cgame.q3asm  fx_blaster.c  fx_bowcaster.c  fx_bryarpistol.c  fx_demp2.c  fx_disruptor.c  fx_flechette.c  fx_force.c  fx_heavyrepeater.c  (+3 more)
code/game/: CMakeLists.txt  ai_main.c  ai_main.h  ai_util.c  ai_wpnav.c  anims.h  be_aas.h  be_ai_char.h  be_ai_chat.h  be_ai_gen.h  be_ai_goal.h  be_ai_move.h  be_ai_weap.h  be_ea.h  bg_lib.c  bg_lib.h  bg_local.h  bg_misc.c  bg_net.h  bg_panimate.c  bg_pmove.c  bg_public.h  bg_saber.c  bg_saga.h  bg_slidemove.c  bg_version.h  bg_weapons.c  bg_weapons.h  botlib.h  chars.h  g_active.c  g_arenas.c  g_bot.c  g_client.c  g_cmds.c  g_combat.c  g_debug.c  g_dimensions.c  g_glicko.c  g_items.c  (+36 more)
code/ghoul2/: g2.h
code/qcommon/: qfiles.h
code/tools/: CMakeLists.txt
code/tools/asm/: CMakeLists.txt  opstrings.h
code/tools/lcc/: CMakeLists.txt
code/tools/lcc/cpp/: unix.c
code/tools/lcc/etc/: CMakeLists.txt  bytecode.c
code/tools/lcc/lburg/: CMakeLists.txt
code/tools/lcc/src/: CMakeLists.txt  c.h  gen.c  profio.c
code/ui/: CMakeLists.txt  keycodes.h  ui.bat  ui.q3asm  ui_atoms.c  ui_force.c  ui_force.h  ui_gameinfo.c  ui_local.h  ui_macroscan.c  ui_main.c  ui_players.c  ui_public.h  ui_shared.c  ui_shared.h  ui_syscalls.asm  ui_syscalls.c
tools/: q3scriptindent.pl
ui/: menudef.h
